[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Recipes/Platformer/07.interactive-area/InteractiveArea2D.gd" id="1_s66tg"]

[node name="InteractiveArea2D" type="Area2D"]
collision_layer = 0
collision_mask = 8
script = ExtResource("1_s66tg")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
